# tensorflow-cmake-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tf_demo.cpp
